<?xml version="1.0" encoding="utf-8"?>
<resources>

  <!-- Content Descriptions and Accessibility Text -->
  <string name="accessibility_add">Adicionar Hábito</string>

  <string name="mon">Segunda</string>
  <string name="tue">Terça</string>
  <string name="wed">Quarta</string>
  <string name="thu">Quinta</string>
  <string name="fri">Sexta</string>
  <string name="sat">Sábado</string>
  <string name="sun">Domingo</string>
</resources>
